--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ Le projet consistait en développer une application de gestion de risque pour l'
 		                    <!-- End .project -->
 					    <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/2res.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -281,7 +281,7 @@ Le projet consistait en développer une application de gestion de risque pour l'
                 <!-- End .project -->
 					    			    <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/tel.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
