--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Expérience Professionnelle</h2>
+	    <h2 class="heading">Expérience Professionnelle</h2></br>
 	    <h3 class="heading">Consultant Zakaria Louizy</h3>
         <div id="experience-timeline">
             <div data-date="Année 2022 - 2023">
@@ -110,7 +110,7 @@
 			
                 </ul>
             </div>
-		 <div data-date="2021 – 1 mois">
+	<div data-date="2021 – 1 mois">
                 <h3>Agadir LIFT</h3>
                 <h4>STAGE D’INITIATION</h4>
                 <ul>
@@ -126,7 +126,7 @@
 		
         </div>
 	<h3 class="heading">Consultante Hiba Bellafkih</h3>
-		<div id="experience-timeline">
+	<div id="experience-timeline2">
             <div data-date="Novembre 2022 – Présent">
                 <h3>Ecole internationale de programmation Algorithmics</h3>
                 <h4>Enseignante à temps partiel</h4>
@@ -148,7 +148,7 @@ De juillet à septembre 2022, j'ai travaillé en tant que développeuse full-sta
             </div>
         </div>
 	    <h3 class="heading">Consultant Mohamed lemine Telmoudy</h3>
-	    <div id="experience-timeline">
+	    <div id="experience-timeline3">
  <div data-date="Août 2021 – Septembre 2021">
                 <h3>Stage Entrepreneuriat</h3>
                 <h4>SMI (Startup Mauritania Incubator)</h4>
