--- a/index.html
+++ b/index.html
@@ -261,10 +261,12 @@ Le projet "Knn Visualisation" consistait à créer une application web permettan
                     <div class="project-info">
                         <h3>Camp-Conn</h3>
                         <p>
-Le projet consistait en développer une application de gestion de risque pour l'installation de l'infrastructure wifi dans les établissements universitaires et administratifs. L'application devait permettre d'analyser les risques liés à l'installation de l'infrastructure wifi, de suivre les mesures de sécurité mises en place et de fournir des rapports d'audit détaillés. Le développement de cette application a impliqué une analyse approfondie des risques et des mesures de sécurité, ainsi que la mise en place de fonctionnalités conviviales pour les utilisateurs. L'application a permis de réduire les risques liés à l'installation de l'infrastructure wifi et a amélioré la sécurité des établissements universitaires et administratifs.                    <!-- End .project-info -->
+Le projet consistait en développer une application de gestion de risque pour l'installation de l'infrastructure wifi dans les établissements universitaires et administratifs. L'application devait permettre d'analyser les risques liés à l'installation de l'infrastructure wifi, de suivre les mesures de sécurité mises en place et de fournir des rapports d'audit détaillés. Le développement de cette application a impliqué une analyse approfondie des risques et des mesures de sécurité, ainsi que la mise en place de fonctionnalités conviviales pour les utilisateurs. L'application a permis de réduire les risques liés à l'installation de l'infrastructure wifi et a amélioré la sécurité des établissements universitaires et administratifs.           </p>
+				<!-- End .project-info -->
                 </div>
+		    </div>
 		                    <!-- End .project -->
-					    <div class="project shadow-large">
+		<div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/2res.png" />
                     </div>
@@ -279,7 +281,7 @@ Le projet consistait en développer une application de gestion de risque pour l'
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
-					    			    <div class="project shadow-large">
+		<div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/tel.png" />
                     </div>
